--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
 
         <div class="container my-5 py-5">
-            <h1>Konfigurasi Elektron Atom</h1>
+            <h1>Daftar Konfigurasi Elektron Atom</h1>
 
             <button class="btn btn-primary my-4" id="atomModalBtn" data-bs-toggle="modal" data-bs-target="#atomModal">
                 Tabel &raquo; Teks
@@ -39,7 +39,7 @@
 
             <div class="row">
                 <div class="col">
-                    <table class="table">
+                    <table class="table table-hover table-striped">
                         <thead>
                             <tr>
                                 <th scope="col">No</th>
@@ -52,18 +52,7 @@
                                 <th scope="col">Bilangan Kuantum</th>
                             </tr>
                         </thead>
-                        <tbody id="table-atoms">
-                            <tr>
-                                <th scope="row">1</th>
-                                <td><sup>1</sup><sub>1</sub>H</td>
-                                <td>1</td>
-                                <td>1</td>
-                                <td>0</td>
-                                <td>1</td>
-                                <td>1s<sup>1</sup></td>
-                                <td>n = 1, l = 0, m = 0, s = 1/2</td>
-                            </tr>
-                        </tbody>
+                        <tbody id="table-atoms"></tbody>
                     </table>
                 </div>
             </div>
